--- a/pagina_de_receita/index.html
+++ b/pagina_de_receita/index.html
@@ -69,5 +69,11 @@
             </table>
         </section>
     </main>
+    <footer>
+        <p>
+            2025 &copy; Desafio do <a href="https://www.frontendmentor.io/" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
+            Codado por <a href="https://https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">Sandro Batista</a>.
+        </p>
+    </footer>
 </body>
 </html>
