--- a/perfil-de-links-sociais/index.html
+++ b/perfil-de-links-sociais/index.html
@@ -10,20 +10,26 @@
 <body>
     <main>
         <header>
-            <img src="assets/images/programador-negro.jpeg" width="100" height="100" alt="Foto de perfil de Sandro Batista">
+            <img src="assets/images/programador-negro.jpeg" title="@devsandrobatista" width="100" height="100" alt="Foto de perfil de Sandro Batista">
             <h1 id="nome">Sandro Batista</h1>
-            <a href="#" id="localizacao">Entre Rios, Bahia</a>
+            <a href="https://www.google.com/maps/@0,0,4z" id="localizacao" title="Localização Fictícia no Mapa">Café com Código, Cyberspace</a>
         </header>
         <p id="cargo">Desenvolvedor Front-end</p>
         <nav>
             <ul>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">Frontend Mentor</a></li>
-                <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li class="ativo"><a href="https://github.com/devsandrobatista">GitHub</a></li>
+                <li class="ativo"><a href="https://www.frontendmentor.io/profile/devsandrobatista">Frontend Mentor</a></li>
+                <li class="inativo" title="Perfil do LinkedIn não disponível"><a href="#">LinkedIn</a></li>
+                <li class="inativo" title="Perfil do Twitter não disponível"><a href="#">Twitter</a></li>
+                <li class="inativo" title="Perfil do Instagram não disponível"><a href="#">Instagram</a></li>
             </ul>
         </nav>
     </main>
+    <footer>
+        <p>
+            2025 &copy; Desafio do <a href="https://www.frontendmentor.io/" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
+            Codado por <a href="https://https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">Sandro Batista</a>.
+        </p>
+    </footer>
 </body>
 </html>
