--- a/perfil-de-links-sociais/index.html
+++ b/perfil-de-links-sociais/index.html
@@ -12,13 +12,13 @@
         <header>
             <img src="assets/images/programador-negro.jpeg" title="@devsandrobatista" width="100" height="100" alt="Foto de perfil de Sandro Batista">
             <h1 id="nome">Sandro Batista</h1>
-            <a href="https://www.google.com/maps/@0,0,4z" id="localizacao" title="Localização Fictícia no Mapa">Café com Código, Cyberspace</a>
+            <a href="https://www.google.com/maps/@0,0,4z" target="_blank" rel="noopener noreferrer" id="localizacao" title="Localização Fictícia no Mapa">Café com Código, Cyberspace</a>
         </header>
         <p id="cargo">Desenvolvedor Front-end</p>
         <nav>
             <ul>
-                <li class="ativo"><a href="https://github.com/devsandrobatista">GitHub</a></li>
-                <li class="ativo"><a href="https://www.frontendmentor.io/profile/devsandrobatista">Frontend Mentor</a></li>
+                <li class="ativo"><a href="https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                <li class="ativo"><a href="https://www.frontendmentor.io/profile/devsandrobatista" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></li>
                 <li class="inativo" title="Perfil do LinkedIn não disponível"><a href="#">LinkedIn</a></li>
                 <li class="inativo" title="Perfil do Twitter não disponível"><a href="#">Twitter</a></li>
                 <li class="inativo" title="Perfil do Instagram não disponível"><a href="#">Instagram</a></li>
