Fiz alterações no HTML > nav > div.  E também no CSS

--- a/perfil-de-links-sociais/index.html
+++ b/perfil-de-links-sociais/index.html
@@ -15,7 +15,7 @@
             <a href="https://www.google.com/maps/@0,0,4z" target="_blank" rel="noopener noreferrer" id="localizacao" title="Localização Fictícia no Mapa">Café com Código, Cyberspace</a>
         </header>
         <p id="cargo">Desenvolvedor Front-end</p>
-        <nav>
+        <div>
             <ul>
                 <li class="ativo"><a href="https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                 <li class="ativo"><a href="https://www.frontendmentor.io/profile/devsandrobatista" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></li>
@@ -23,7 +23,7 @@
                 <li class="inativo" title="Perfil do Twitter não disponível"><a href="#">Twitter</a></li>
                 <li class="inativo" title="Perfil do Instagram não disponível"><a href="#">Instagram</a></li>
             </ul>
-        </nav>
+        </div>
     </main>
     <footer>
         <p>
