Adicione mais um link ao footer

--- a/perfil-de-links-sociais/index.html
+++ b/perfil-de-links-sociais/index.html
@@ -28,7 +28,8 @@
     <footer>
         <p>
             2025 &copy; Desafio do <a href="https://www.frontendmentor.io/" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
-            Codado por <a href="https://https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">Sandro Batista</a>.
+            Codado por <a href="https://https://github.com/devsandrobatista" target="_blank" rel="noopener noreferrer">Sandro Batista</a>.<br>
+            <small>Agradecimento especial pela ajuda de <a href="https://www.frontendmentor.io/profile/R3ygoski" target="_blank" rel="noopener noreferrer">Bernardo Poggioni</a></small>
         </p>
     </footer>
 </body>
