--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -18,14 +18,14 @@
         </div>
         <article>
             <h1><abbr title="HyperText Markup Language">HTML</abbr> &amp; <abbr title="Cascading Style Sheet">CSS</abbr> foundations</h1>
-            <p>THese languages are the backbone of every website, defining structure, content, and presentation.</p>
+            <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
         </article>
         <footer id="blog-perfil">
             <img src="assets/images/bVh_5EGnTd6Kr7so1tKiXQ.webp" alt="">
             <p>Santso Smyth</p>
         </footer>
     </main>
-    <footer>
+    <footer id="footer">
         <p>&copy; 2025 Challenge by <a href="https://www.frontendmentor.io/?ref=challenge">Frontend Mentor</a>. Coded by <a href="https://github.com/devsandrobatista" target="_blank">Sandro Batista</a>.</p>
     </footer>
 </body>
