--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -41,7 +41,7 @@
         }
 
         #section {
-            width: 400px;
+            max-width: 400px;
             margin: 0 auto;
         }
 
