--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -46,7 +46,7 @@
         }
 
         #section > p {
-            width: 250px;
+            max-width: 250px;
             margin: auto;
 
             color: var(--slate2);
