--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -19,12 +19,12 @@
             background-color: var(--slate1);
         }
 
-        div#main, #footer{
+        main, footer{
             background-color: #fff;
             box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.479);
             border-radius: 1.5em;
             width: 88%;
-            max-width: 500px;
+            max-width: 320px;
             padding:15px;
             margin: 3% auto 0;
 
@@ -33,19 +33,28 @@
             text-align: center;
         }
 
-        #main > #picture > img {
+        main > figure {
+            margin: 0;
+        }
+    
+        main > figure > img {
             display: block;
             width: 100%;
             border-radius: 1em;
             margin: 0 auto;
         }
 
-        #section {
+        section {
             max-width: 400px;
             margin: 0 auto;
         }
 
-        #section > p {
+        section > h1 {
+            width: 250px;
+            margin: 16px auto;
+        }
+
+        section > p {
             max-width: 250px;
             margin: auto;
 
@@ -53,33 +62,36 @@
             line-height: 1.3em;
         }
 
-        #footer {
+        footer {
+            font-size: .75em;
             border-radius: 1em;
             padding: 10px;
             margin: 10px auto;
         }
 
-        #footer a {
+        footer a {
             color: var(--slate2);
             text-decoration: none;
         }
 
-        #footer a:hover {
+        footer a:hover {
             color: var(--slate3);
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div id="main">
-        <div id="picture">
+    <main>
+        <figure>
             <img src="assets/images/image-qr-code.png" alt="QR code leading to Frontend Mentor">
-        </div>
-        <div id="section">
+
+        </figure>
+        <section>
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </div>
-    </div>
-    <div id="footer">Challenge by <a href="" class="link">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/devsandrobatista" class="link">devsandrobatista</a>.</div>
+        </section>
+    </main>
+    <footer>Challenge by <a href="" class="link">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/devsandrobatista" class="link">devsandrobatista</a>.
+    </footer>
 </body>
 </html>
