--- a/profile-card/index.html
+++ b/profile-card/index.html
@@ -7,31 +7,34 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="main">
-        <div id="img-capa">
+    <main>
+        <div class="img-capa">
         </div>
-        <div id="img-perfil">
+        <figure class="img-perfil">
             <img src="https://devsandrobatista.github.io/challenges/perfil-de-links-sociais/assets/images/programador-negro.jpeg" width="100" height="100" alt="">
-        </div>
-        <div id="information">
-            <h1 id="name">Santso Smyth</h1>
-            <p id="city">CyberCode</p>
-        </div>
+        </figure>
+        <section class="information">
+            <h1 class="name">Santso Smyth</h1>
+            <p class="city">CyberCode</p>
+        </section>
         <hr>
-        <div id="stats-container">
-            <div class="container" id="followers">
+        <section class="stats-container">
+            <div class="followers container">
                 <p class="num">80K</p>
                 <p class="label">Followers</p>
             </div>
-            <div class="container" id="like">
+            <div class="like container">
                 <p class="num">103K</p>
                 <p class="label">Like</p>
             </div>
-            <div class="container" id="photos">
+            <div class="photos container">
                 <p class="num">1.4K</p>
                 <p class="label">Photos</p>
             </div>
-        </div>
-    </div>  
+        </section>
+    </main>  
+    <footer>
+        Challenge by <a href="" class="link">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/devsandrobatista" class="link">devsandrobatista
+    </footer>
 </body>
 </html>
